# Read_PLC

Test_1/: Cargo.toml
Test_1/src/: README.MD  main.rs
Test_2/: Cargo.toml
Test_2/src/: handler.rs  http.cpp  main.rs  model.rs  test.rs
