[package]
name = "Test_2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
error = "0.1.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
